syntax = "proto3";

//package example;
option java_multiple_files = true;
option java_package = "example";

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

service GreeterService {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}
